--- a/day 3/index.html
+++ b/day 3/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/style.css">
+    <link rel="stylesheet" href="style.css">
     <!-- Font Awesome -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" integrity="sha512-iBBXm8fW90+nuLcSKlbmrPcLa0OT92xO1BIsZ+ywDWZCvqsWgccV3gFoRBv0z+8dLJgyAHIhR35VZc2oM/gI1w==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <script src="https://kit.fontawesome.com/95a2002ecf.js" crossorigin="anonymous"></script>
@@ -29,11 +29,10 @@
     </header>
     <!-- Hero Section Starts -->
     <section class="home" id="home" >
-        <div class="background" style="background-color: bisque;">
+        <div class="background"></div>
         <div class="content">
-            <h2 class="heading">Lorem ipsum, dolor sit amet consectetur adipisicing elit.</h2>
-            <a href="https://www.google.com/" target="_blank" class="button">Search</a>
-        </div>
+            <h2 class="heading">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nisi libero sed quis provident enim praesentium illo dolorum, officia ipsum et dolores autem molestias ratione, corrupti mollitia aliquid iste earum perspiciatis?</h2>
+            <a href="https://www.google.com/" target="_blank" class="btn">Search</a>
         </div>
     </section>
 </body>
