--- a/day 8/index.html
+++ b/day 8/index.html
@@ -5,13 +5,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Day 8</title>
     <style>
-        /* .transformDiv{
+        .transformDiv{
             height: 50px;
             width: 50px;
             margin: 100px;
             background-color: blue;
             transform: skewY(-45deg);
-        } */
+        }
         @keyframes example {
         0%   {background-color:red; left:0px; top:0px;}
         25%  {background-color:yellow; left:200px; top:0px;}
@@ -33,7 +33,7 @@
     <div class="transformDiv">
 
     </div>
-    <!-- <form>
+    <form>
         <select>
             Choose a state
             <option>Haryana</option>
@@ -42,8 +42,8 @@
             <option>UP</option>
 
         </select>
-    </form> -->
-    <!-- <canvas id="myCanvas" width="300" height="150"></canvas>
+    </form>
+    <canvas id="myCanvas" width="300" height="150"></canvas>
 
     <script>
         const canvas = document.getElementById("myCanvas");
@@ -55,6 +55,6 @@
         ctx.strokeRect(50, 25, 100, 50);
 
 
-        </script> -->
+        </script>
 </body>
 </html>
