--- a/day 9_Portfolio/index.html
+++ b/day 9_Portfolio/index.html
@@ -46,10 +46,10 @@
     </a>
     <div class="socials">
         <ul class="social-icons">
-          <li><a class="linkedin" aria-label="LinkedIn" href="https://www.linkedin.com/in/imps1001/" target="_blank"><i class="fab fa-linkedin"></i></a></li> 
-          <li><a class="github" aria-label="GitHub" href="https://github.com/imps1001" target="_blank"><i class="fab fa-github"></i></a></li>
-          <li><a class="telegram" aria-label="Telegram" href="https://t.me/imps1001" target="_blank"><i class="fab fa-telegram-plane"></i></a></li>
-          <li><a class="instagram" aria-label="Instagram" href="https://www.instagram.com/govind_sakhi_007/"><i class="fab fa-instagram" target="_blank"></i></a></li>
+          <li><a class="linkedin" aria-label="LinkedIn" href="#" target="_blank"><i class="fab fa-linkedin"></i></a></li> 
+          <li><a class="github" aria-label="GitHub" href="https://github.com/codeatrandom" target="_blank"><i class="fab fa-github"></i></a></li>
+          <li><a class="https://chat.whatsapp.com/D0TVhE60roPJKH6Rcof6c4" aria-label="Telegram" href="" target="_blank"><i class="fab fa-telegram-plane"></i></a></li>
+          <li><a class="instagram" aria-label="Instagram" href="https://www.instagram.com/codeatrandom/"><i class="fab fa-instagram" target="_blank"></i></a></li>
           <li><a class="dev" aria-label="Dev" href="https://www.youtube.com/@codeatrandom" target="_blank"><i class="fa-brands fa-youtube"></i></a></li>
         </ul>
       </div>
@@ -93,7 +93,7 @@
         </div>
         
         <div class="resumebtn">
-            <a href="https://drive.google.com/file/d/1aR4COjsv1ZXqIcqPBd2L4H1GswW2DTjJ/view?usp=sharing" target="_blank" class="btn"><span>Resume</span>
+            <a href="#" target="_blank" class="btn"><span>Resume</span>
                 <i class="fas fa-chevron-right"></i>
             </a>
         </div>
@@ -414,10 +414,10 @@
           <p> <i class="fas fa-envelope"></i>pragatisahu1234@gmail.com</p>
           <p> <i class="fas fa-map-marked-alt"></i>Delhi NCR, India</p>
           <div class="share">
-              <a href="https://www.linkedin.com/in/imps1001/" class="fab fa-linkedin" aria-label="LinkedIn" target="_blank"></a>
-              <a href="https://github.com/imps1001" class="fab fa-github" aria-label="GitHub" target="_blank"></a>
-              <a href="mailto:pragatisahu1234@gmail.com" class="fas fa-envelope" aria-label="Mail" target="_blank"></a>
-              <a href="https://t.me/imps1001" class="fab fa-telegram-plane" aria-label="Telegram" target="_blank"></a>
+              <a href="#" class="fab fa-linkedin" aria-label="LinkedIn" target="_blank"></a>
+              <a href="https://github.com/codeatrandom" class="fab fa-github" aria-label="GitHub" target="_blank"></a>
+              <a href="mailto:codeatrandom@gmail.com" class="fas fa-envelope" aria-label="Mail" target="_blank"></a>
+              <a href="https://chat.whatsapp.com/D0TVhE60roPJKH6Rcof6c4" class="fab fa-telegram-plane" aria-label="Telegram" target="_blank"></a>
               <a href="https://www.youtube.com/@codeatrandom" target="_blank" class="fa-brands fa-youtube" aria-label="Youtube"></a>
           </div>
       </div>
